[gd_scene load_steps=45 format=2]

[ext_resource path="res://Assets/Interior_Tilesets/Room_Builder_subfiles_48x48/Room_Builder_3d_walls_48x48.png" type="Texture" id=1]
[ext_resource path="res://Assets/background.png" type="Texture" id=2]
[ext_resource path="res://Assets/Interior_Tilesets/Room_Builder_subfiles_48x48/Room_Builder_Floors_48x48.png" type="Texture" id=3]
[ext_resource path="res://Assets/Character_Sprites/Premade_Characters/Premade_Char_07_Rows/l0_Premade_Char_07_ROWS03 (Walking)/l0_Walking20.png" type="Texture" id=4]
[ext_resource path="res://Assets/Character_Sprites/Premade_Characters/Premade_Char_07_Rows/l0_Premade_Char_07_ROWS03 (Walking)/l0_Walking08.png" type="Texture" id=5]
[ext_resource path="res://Assets/Character_Sprites/Premade_Characters/Premade_Char_07_Rows/l0_Premade_Char_07_ROWS01 (Idle)/l0_Idle1.png" type="Texture" id=6]
[ext_resource path="res://Assets/Character_Sprites/Premade_Characters/Premade_Char_07_Rows/l0_Premade_Char_07_ROWS01 (Idle)/l0_Idle2.png" type="Texture" id=7]
[ext_resource path="res://Assets/PressedKeys.png" type="Texture" id=8]
[ext_resource path="res://Assets/Keys.png" type="Texture" id=9]
[ext_resource path="res://Assets/Character_Sprites/Premade_Characters/Premade_Char_07_Rows/l0_Premade_Char_07_ROWS03 (Walking)/l0_Walking23.png" type="Texture" id=10]
[ext_resource path="res://Assets/Character_Sprites/Premade_Characters/Premade_Char_07_Rows/l0_Premade_Char_07_ROWS03 (Walking)/l0_Walking04.png" type="Texture" id=11]
[ext_resource path="res://Assets/Character_Sprites/Premade_Characters/Premade_Char_07_Rows/l0_Premade_Char_07_ROWS03 (Walking)/l0_Walking03.png" type="Texture" id=12]
[ext_resource path="res://Assets/Character_Sprites/Premade_Characters/Premade_Char_07_Rows/l0_Premade_Char_07_ROWS03 (Walking)/l0_Walking02.png" type="Texture" id=13]
[ext_resource path="res://Assets/Character_Sprites/Premade_Characters/Premade_Char_07_Rows/l0_Premade_Char_07_ROWS03 (Walking)/l0_Walking01.png" type="Texture" id=14]
[ext_resource path="res://Assets/Character_Sprites/Premade_Characters/Premade_Char_07_Rows/l0_Premade_Char_07_ROWS03 (Walking)/l0_Walking10.png" type="Texture" id=15]
[ext_resource path="res://Assets/Character_Sprites/Premade_Characters/Premade_Char_07_Rows/l0_Premade_Char_07_ROWS03 (Walking)/l0_Walking21.png" type="Texture" id=16]
[ext_resource path="res://Assets/Character_Sprites/Premade_Characters/Premade_Char_07_Rows/l0_Premade_Char_07_ROWS03 (Walking)/l0_Walking22.png" type="Texture" id=17]
[ext_resource path="res://Assets/Character_Sprites/Premade_Characters/Premade_Char_07_Rows/l0_Premade_Char_07_ROWS03 (Walking)/l0_Walking19.png" type="Texture" id=18]
[ext_resource path="res://Assets/Character_Sprites/Premade_Characters/Premade_Char_07_Rows/l0_Premade_Char_07_ROWS01 (Idle)/l0_Idle3.png" type="Texture" id=19]
[ext_resource path="res://MainChar.gd" type="Script" id=20]
[ext_resource path="res://Assets/Character_Sprites/Premade_Characters/Premade_Char_07_Rows/l0_Premade_Char_07_ROWS01 (Idle)/l0_Idle4.png" type="Texture" id=21]
[ext_resource path="res://Assets/Character_Sprites/Premade_Characters/Premade_Char_07_Rows/l0_Premade_Char_07_ROWS03 (Walking)/l0_Walking05.png" type="Texture" id=22]
[ext_resource path="res://Assets/Character_Sprites/Premade_Characters/Premade_Char_07_Rows/l0_Premade_Char_07_ROWS03 (Walking)/l0_Walking09.png" type="Texture" id=23]
[ext_resource path="res://Assets/Character_Sprites/Premade_Characters/Premade_Char_07_Rows/l0_Premade_Char_07_ROWS03 (Walking)/l0_Walking06.png" type="Texture" id=24]
[ext_resource path="res://Assets/Character_Sprites/Premade_Characters/Premade_Char_07_Rows/l0_Premade_Char_07_ROWS03 (Walking)/l0_Walking11.png" type="Texture" id=25]
[ext_resource path="res://Assets/Character_Sprites/Premade_Characters/Premade_Char_07_Rows/l0_Premade_Char_07_ROWS03 (Walking)/l0_Walking12.png" type="Texture" id=26]
[ext_resource path="res://Assets/Character_Sprites/Premade_Characters/Premade_Char_07_Rows/l0_Premade_Char_07_ROWS03 (Walking)/l0_Walking13.png" type="Texture" id=27]
[ext_resource path="res://Assets/Character_Sprites/Premade_Characters/Premade_Char_07_Rows/l0_Premade_Char_07_ROWS03 (Walking)/l0_Walking14.png" type="Texture" id=28]
[ext_resource path="res://Assets/Character_Sprites/Premade_Characters/Premade_Char_07_Rows/l0_Premade_Char_07_ROWS03 (Walking)/l0_Walking15.png" type="Texture" id=29]
[ext_resource path="res://Assets/Character_Sprites/Premade_Characters/Premade_Char_07_Rows/l0_Premade_Char_07_ROWS03 (Walking)/l0_Walking16.png" type="Texture" id=30]
[ext_resource path="res://Assets/Character_Sprites/Premade_Characters/Premade_Char_07_Rows/l0_Premade_Char_07_ROWS03 (Walking)/l0_Walking17.png" type="Texture" id=31]
[ext_resource path="res://Assets/Character_Sprites/Premade_Characters/Premade_Char_07_Rows/l0_Premade_Char_07_ROWS03 (Walking)/l0_Walking18.png" type="Texture" id=32]
[ext_resource path="res://Assets/Character_Sprites/Premade_Characters/Premade_Char_07_Rows/l0_Premade_Char_07_ROWS03 (Walking)/l0_Walking07.png" type="Texture" id=33]
[ext_resource path="res://Assets/Character_Sprites/Premade_Characters/Premade_Char_07_Rows/l0_Premade_Char_07_ROWS03 (Walking)/l0_Walking24.png" type="Texture" id=34]
[ext_resource path="res://Interior.gd" type="Script" id=35]
[ext_resource path="res://Current_Gold.tscn" type="PackedScene" id=36]

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 64, 64, 0, 64, 0, 0, 64, 0 )

[sub_resource type="ConvexPolygonShape2D" id=7]
points = PoolVector2Array( 64, 32, 0, 32, 0, 0, 64, 0 )

[sub_resource type="TileSet" id=1]
0/name = "Room_Builder_Floors_48x48.png 0"
0/texture = ExtResource( 3 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 416, 800, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "Room_Builder_Floors_48x48.png 1"
1/texture = ExtResource( 3 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 32, 1088, 64, 64 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "Room_Builder_Floors_48x48.png 2"
2/texture = ExtResource( 3 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 32, 1472, 64, 64 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "Room_Builder_Floors_48x48.png 3"
3/texture = ExtResource( 3 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 32, 1664, 64, 64 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0
4/name = "Room_Builder_3d_walls_48x48.png 4"
4/texture = ExtResource( 1 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 608, 2304, 32, 32 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape_one_way = false
4/shape_one_way_margin = 0.0
4/shapes = [  ]
4/z_index = 0
5/name = "background.png 5"
5/texture = ExtResource( 2 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 160, 96, 64, 64 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape = SubResource( 2 )
5/shape_one_way = false
5/shape_one_way_margin = 1.0
5/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
5/z_index = 0
6/name = "Room_Builder_3d_walls_48x48.png 6"
6/texture = ExtResource( 1 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 160, 96, 64, 64 )
6/tile_mode = 0
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shape_offset = Vector2( 0, 0 )
6/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
6/shape = SubResource( 7 )
6/shape_one_way = false
6/shape_one_way_margin = 1.0
6/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 7 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
6/z_index = 0

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 65, 41 )

[sub_resource type="CapsuleShape2D" id=3]
radius = 24.0
height = 30.0

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 21 ) ],
"loop": true,
"name": "idle_down",
"speed": 5.0
}, {
"frames": [ ExtResource( 19 ) ],
"loop": true,
"name": "idle_left",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "idle_right",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "idle_up",
"speed": 5.0
}, {
"frames": [ ExtResource( 18 ), ExtResource( 4 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 10 ), ExtResource( 34 ) ],
"loop": true,
"name": "walk_down",
"speed": 5.0
}, {
"frames": [ ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 31 ), ExtResource( 32 ) ],
"loop": true,
"name": "walk_left",
"speed": 5.0
}, {
"frames": [ ExtResource( 14 ), ExtResource( 13 ), ExtResource( 12 ), ExtResource( 11 ), ExtResource( 22 ), ExtResource( 24 ) ],
"loop": true,
"name": "walk_right",
"speed": 5.0
}, {
"frames": [ ExtResource( 33 ), ExtResource( 5 ), ExtResource( 23 ), ExtResource( 15 ), ExtResource( 25 ), ExtResource( 26 ) ],
"loop": true,
"name": "walk_up",
"speed": 5.0
} ]

[sub_resource type="Animation" id=5]
resource_name = "KeyPrompt"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("KeyPrompt:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.0546761, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ ExtResource( 9 ), ExtResource( 8 ) ]
}

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("KeyPrompt:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 9 ) ]
}

[node name="Interior" type="Node2D"]
script = ExtResource( 35 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 1 )
format = 1
tile_data = PoolIntArray( -524302, 5, 0, -524301, 5, 0, -524300, 5, 0, -524299, 5, 0, -524298, 5, 0, -524297, 5, 0, -524296, 5, 0, -524295, 5, 0, -524294, 5, 0, -524293, 5, 0, -524292, 5, 0, -524291, 5, 0, -524290, 5, 0, -524289, 5, 0, -589824, 5, 0, -589823, 5, 0, -589822, 5, 0, -589821, 5, 0, -589820, 5, 0, -589819, 5, 0, -589818, 5, 0, -589817, 5, 0, -589816, 5, 0, -589815, 5, 0, -589814, 5, 0, -589813, 5, 0, -589812, 5, 0, -458766, 5, 0, -458765, 5, 0, -458764, 5, 0, -458763, 5, 0, -458762, 5, 0, -458761, 5, 0, -458760, 5, 0, -458759, 5, 0, -458758, 5, 0, -458757, 5, 0, -458756, 5, 0, -458755, 5, 0, -458754, 5, 0, -458753, 5, 0, -524288, 5, 0, -524287, 5, 0, -524286, 5, 0, -524285, 5, 0, -524284, 5, 0, -524283, 5, 0, -524282, 5, 0, -524281, 5, 0, -524280, 5, 0, -524279, 5, 0, -524278, 5, 0, -524277, 5, 0, -524276, 5, 0, -393230, 5, 0, -393229, 5, 0, -393228, 5, 0, -393227, 5, 0, -393226, 5, 0, -393225, 5, 0, -393224, 5, 0, -393223, 5, 0, -393222, 5, 0, -393221, 5, 0, -393220, 5, 0, -393219, 5, 0, -393218, 5, 0, -393217, 5, 0, -458752, 5, 0, -458751, 5, 0, -458750, 5, 0, -458749, 5, 0, -458748, 5, 0, -458747, 5, 0, -458746, 5, 0, -458745, 5, 0, -458744, 5, 0, -458743, 5, 0, -458742, 5, 0, -458741, 5, 0, -458740, 5, 0, -327694, 5, 0, -327693, 5, 0, -327692, 5, 0, -327691, 5, 0, -327690, 5, 0, -327689, 5, 0, -327688, 5, 0, -327687, 5, 0, -327686, 5, 0, -327685, 5, 0, -327684, 5, 0, -327683, 5, 0, -327682, 5, 0, -327681, 5, 0, -393216, 5, 0, -393215, 5, 0, -393214, 5, 0, -393213, 5, 0, -393212, 5, 0, -393211, 5, 0, -393210, 5, 0, -393209, 5, 0, -393208, 5, 0, -393207, 5, 0, -393206, 5, 0, -393205, 5, 0, -393204, 5, 0, -262158, 5, 0, -262157, 5, 0, -262156, 5, 0, -262155, 5, 0, -262154, 5, 0, -262153, 5, 0, -262152, 5, 0, -262151, 5, 0, -262150, 5, 0, -262149, 5, 0, -262148, 6, 0, -262147, 6, 0, -262146, 6, 0, -262145, 6, 0, -327680, 6, 0, -327679, 6, 0, -327678, 6, 0, -327677, 6, 0, -327676, 5, 0, -327675, 5, 0, -327674, 5, 0, -327673, 5, 0, -327672, 5, 0, -327671, 5, 0, -327670, 5, 0, -327669, 5, 0, -327668, 5, 0, -196622, 5, 0, -196621, 5, 0, -196620, 5, 0, -196619, 5, 0, -196618, 5, 0, -196617, 5, 0, -196616, 5, 0, -196615, 5, 0, -196614, 5, 0, -196613, 5, 0, -196612, 2, 0, -196611, 2, 0, -196610, 2, 0, -196609, 2, 0, -262144, 2, 0, -262143, 2, 0, -262142, 2, 0, -262141, 2, 0, -262140, 5, 0, -262139, 5, 0, -262138, 5, 0, -262137, 5, 0, -262136, 5, 0, -262135, 5, 0, -262134, 5, 0, -262133, 5, 0, -262132, 5, 0, -131086, 5, 0, -131085, 5, 0, -131084, 5, 0, -131083, 5, 0, -131082, 5, 0, -131081, 5, 0, -131080, 5, 0, -131079, 5, 0, -131078, 5, 0, -131077, 5, 0, -131076, 2, 0, -131075, 2, 0, -131074, 2, 0, -131073, 2, 0, -196608, 2, 0, -196607, 2, 0, -196606, 2, 0, -196605, 2, 0, -196604, 5, 0, -196603, 5, 0, -196602, 5, 0, -196601, 5, 0, -196600, 5, 0, -196599, 5, 0, -196598, 5, 0, -196597, 5, 0, -196596, 5, 0, -65550, 5, 0, -65549, 5, 0, -65548, 5, 0, -65547, 5, 0, -65546, 5, 0, -65545, 5, 0, -65544, 5, 0, -65543, 5, 0, -65542, 5, 0, -65541, 5, 0, -65540, 2, 0, -65539, 2, 0, -65538, 2, 0, -65537, 2, 0, -131072, 2, 0, -131071, 2, 0, -131070, 2, 0, -131069, 2, 0, -131068, 5, 0, -131067, 5, 0, -131066, 5, 0, -131065, 5, 0, -131064, 5, 0, -131063, 5, 0, -131062, 5, 0, -131061, 5, 0, -131060, 5, 0, -14, 5, 0, -13, 5, 0, -12, 5, 0, -11, 5, 0, -10, 5, 0, -9, 5, 0, -8, 5, 0, -7, 5, 0, -6, 5, 0, -5, 5, 0, -4, 2, 0, -3, 2, 0, -2, 2, 0, -1, 2, 0, -65536, 2, 0, -65535, 2, 0, -65534, 2, 0, -65533, 2, 0, -65532, 5, 0, -65531, 5, 0, -65530, 5, 0, -65529, 5, 0, -65528, 5, 0, -65527, 5, 0, -65526, 5, 0, -65525, 5, 0, -65524, 5, 0, 65522, 5, 0, 65523, 5, 0, 65524, 5, 0, 65525, 5, 0, 65526, 5, 0, 65527, 5, 0, 65528, 5, 0, 65529, 5, 0, 65530, 5, 0, 65531, 5, 0, 65532, 2, 0, 65533, 2, 0, 65534, 2, 0, 65535, 2, 0, 0, 2, 0, 1, 2, 0, 2, 2, 0, 3, 2, 0, 4, 5, 0, 5, 5, 0, 6, 5, 0, 7, 5, 0, 8, 5, 0, 9, 5, 0, 10, 5, 0, 11, 5, 0, 12, 5, 0, 131058, 5, 0, 131059, 5, 0, 131060, 5, 0, 131061, 5, 0, 131062, 5, 0, 131063, 5, 0, 131064, 5, 0, 131065, 5, 0, 131066, 5, 0, 131067, 5, 0, 131068, 2, 0, 131069, 2, 0, 131070, 2, 0, 131071, 2, 0, 65536, 2, 0, 65537, 2, 0, 65538, 2, 0, 65539, 2, 0, 65540, 5, 0, 65541, 5, 0, 65542, 5, 0, 65543, 5, 0, 65544, 5, 0, 65545, 5, 0, 65546, 5, 0, 65547, 5, 0, 65548, 5, 0, 196594, 5, 0, 196595, 5, 0, 196596, 5, 0, 196597, 5, 0, 196598, 5, 0, 196599, 5, 0, 196600, 5, 0, 196601, 5, 0, 196602, 5, 0, 196603, 5, 0, 196604, 2, 0, 196605, 2, 0, 196606, 2, 0, 196607, 2, 0, 131072, 2, 0, 131073, 2, 0, 131074, 2, 0, 131075, 2, 0, 131076, 5, 0, 131077, 5, 0, 131078, 5, 0, 131079, 5, 0, 131080, 5, 0, 131081, 5, 0, 131082, 5, 0, 131083, 5, 0, 131084, 5, 0, 262130, 5, 0, 262131, 5, 0, 262132, 5, 0, 262133, 5, 0, 262134, 5, 0, 262135, 5, 0, 262136, 5, 0, 262137, 5, 0, 262138, 5, 0, 262139, 5, 0, 262140, 2, 0, 262141, 2, 0, 262142, 2, 0, 262143, 2, 0, 196608, 2, 0, 196609, 2, 0, 196610, 2, 0, 196611, 2, 0, 196612, 5, 0, 196613, 5, 0, 196614, 5, 0, 196615, 5, 0, 196616, 5, 0, 196617, 5, 0, 196618, 5, 0, 196619, 5, 0, 196620, 5, 0, 327666, 5, 0, 327667, 5, 0, 327668, 5, 0, 327669, 5, 0, 327670, 5, 0, 327671, 5, 0, 327672, 5, 0, 327673, 5, 0, 327674, 5, 0, 327675, 5, 0, 327676, 5, 0, 327677, 5, 0, 327678, 5, 0, 327679, 1, 0, 262144, 1, 0, 262145, 5, 0, 262146, 5, 0, 262147, 5, 0, 262148, 5, 0, 262149, 5, 0, 262150, 5, 0, 262151, 5, 0, 262152, 5, 0, 262153, 5, 0, 262154, 5, 0, 262155, 5, 0, 262156, 5, 0, 393202, 5, 0, 393203, 5, 0, 393204, 5, 0, 393205, 5, 0, 393206, 5, 0, 393207, 5, 0, 393208, 5, 0, 393209, 5, 0, 393210, 5, 0, 393211, 5, 0, 393212, 5, 0, 393213, 5, 0, 393214, 5, 0, 393215, 5, 0, 327680, 5, 0, 327681, 5, 0, 327682, 5, 0, 327683, 5, 0, 327684, 5, 0, 327685, 5, 0, 327686, 5, 0, 327687, 5, 0, 327688, 5, 0, 327689, 5, 0, 327690, 5, 0, 327691, 5, 0, 327692, 5, 0, 458738, 5, 0, 458739, 5, 0, 458740, 5, 0, 458741, 5, 0, 458742, 5, 0, 458743, 5, 0, 458744, 5, 0, 458745, 5, 0, 458746, 5, 0, 458747, 5, 0, 458748, 5, 0, 458749, 5, 0, 458750, 5, 0, 458751, 5, 0, 393216, 5, 0, 393217, 5, 0, 393218, 5, 0, 393219, 5, 0, 393220, 5, 0, 393221, 5, 0, 393222, 5, 0, 393223, 5, 0, 393224, 5, 0, 393225, 5, 0, 393226, 5, 0, 393227, 5, 0, 393228, 5, 0, 524274, 5, 0, 524275, 5, 0, 524276, 5, 0, 524277, 5, 0, 524278, 5, 0, 524279, 5, 0, 524280, 5, 0, 524281, 5, 0, 524282, 5, 0, 524283, 5, 0, 524284, 5, 0, 524285, 5, 0, 524286, 5, 0, 524287, 5, 0, 458752, 5, 0, 458753, 5, 0, 458754, 5, 0, 458755, 5, 0, 458756, 5, 0, 458757, 5, 0, 458758, 5, 0, 458759, 5, 0, 458760, 5, 0, 458761, 5, 0, 458762, 5, 0, 458763, 5, 0, 458764, 5, 0, 589810, 5, 0, 589811, 5, 0, 589812, 5, 0, 589813, 5, 0, 589814, 5, 0, 589815, 5, 0, 589816, 5, 0, 589817, 5, 0, 589818, 5, 0, 589819, 5, 0, 589820, 5, 0, 589821, 5, 0, 589822, 5, 0, 589823, 5, 0, 524288, 5, 0, 524289, 5, 0, 524290, 5, 0, 524291, 5, 0, 524292, 5, 0, 524293, 5, 0, 524294, 5, 0, 524295, 5, 0, 524296, 5, 0, 524297, 5, 0, 524298, 5, 0, 524299, 5, 0, 524300, 5, 0 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 0, 264 )
current = true

[node name="CanvasLayer" type="CanvasLayer" parent="Camera2D"]

[node name="Current_Gold" parent="Camera2D/CanvasLayer" instance=ExtResource( 36 )]

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( -3, 0 )
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -1, 281 )
shape = SubResource( 8 )

[node name="Main_Character_Body" type="KinematicBody2D" parent="."]
position = Vector2( 0, 264 )
collision_layer = 2
script = ExtResource( 20 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Main_Character_Body"]
position = Vector2( 0, 13 )
shape = SubResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Main_Character_Body"]
frames = SubResource( 4 )
animation = "idle_up"

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="Main_Character_Body"]
remote_path = NodePath("../../Camera2D")

[node name="KeyPrompt" type="Sprite" parent="Main_Character_Body"]
visible = false
position = Vector2( 0, -45 )
scale = Vector2( 1.56667, 1.5 )
texture = ExtResource( 9 )
hframes = 5
vframes = 8
frame = 4

[node name="KeyPressAnimation" type="AnimationPlayer" parent="Main_Character_Body"]
anims/KeyPrompt = SubResource( 5 )
anims/RESET = SubResource( 6 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
